zaphod/themes/teal/static/css/common/forms.less
@form-wrapped-padding: 15px;

.form-wrapped {
    background: @cs-white;
    border: 1px solid darken(@gray-lighter, 12%);
    // XXX There's a browser bug that breaks the rendering on the background
    // overflow when this is enabled... look into it.
    //border-radius: 3px;
    margin-bottom: 20px;
    padding: @form-wrapped-padding;
    overflow: hidden;

    .box-shadow(0 1px 3px rgba(0, 0, 0, 0.1));

    .form-actions {
        margin: -(@form-wrapped-padding + 15px);
        margin-top: 0;
        margin-bottom: -@form-wrapped-padding;
        padding: @form-wrapped-padding;
    }

    legend {
        line-height: 21px;
        padding-bottom: 8px;
    }
}

.form-actions {
    border-top: 1px solid darken(@gray-lighter, 12%);
    background-color: @gray-lighter;
}

.form-group {
    position: relative;

    .error {
        font-weight: bold;
        list-style-type: none;
        background-color: @state-danger-text;
        color: #fff;
        padding: 2px 5px;
        border-radius: 5px;
        z-index: 10;
        -webkit-font-smoothing: antialiased;

        position: absolute;
        margin-top: 3px;

        // Shadowed like dropdowns.
        .box-shadow(0 6px 12px rgba(0, 0, 0, .175));

        &:before {
            display: block;
            content: "";
            border-left: 8px solid transparent;
            border-bottom: 8px solid @state-danger-text;
            border-right: 8px solid transparent;
            position: absolute;
            top: -7px;
            left: 15px;
        }
    }
}

